<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.1">
    <string name="app_name">Android Trivia Quiz</string>

    <string name="topImageDescription">
        Android Image
    </string>

    <string name="question1">
        1. Before selling out to Google, to whom Android co-founder Andy Rubin tried to sell the operating system?
    </string>
    <!--Samsung; radio button-->
    <string name="radio_question1a">
        Motorola
    </string>
    <string name="radio_question1b">
        LG
    </string>
    <string name="radio_question1c">
        Samsung
    </string>

    <string name="question2">
        2. How many millions did Google pay to acquire Android?
    </string>
    <!--$50 Million; Seekbar-->

    <string name="question3">
        3. These are version names of Android
    </string>
    <!--Donut, Honeycomb; checkbox-->
    <string name="cb_question3a">
        Honeycomb
    </string>
    <string name="cb_question3b">
        Donut
    </string>
    <string name="cb_question3c">
        Croissant
    </string>

    <string name="question4">
        4. What was the dessert name for Android version 2.2?
    </string>
    <!--Froyo; free text response-->
    <string name="dessert_name">
        Dessert Name
    </string>

    <string name="question5">
        5. When was the initial release date of Android KitKat?
    </string>
    <!--October 31 2013; radio button-->
    <string name="radio_question5a">
        October 31 2012
    </string>
    <string name="radio_question5b">
        October 31 2013
    </string>
    <string name="radio_question5c">
        October 31 2014
    </string>

    <string name="question6">
        6. Which of these Android apps are developed by Google?
    </string>
    <!--Blogger, Gmail, Snapseed; checkbox-->
    <string name="cb_question6a">
        Blogger
    </string>
    <string name="cb_question6b">
        Gmail
    </string>
    <string name="cb_question6c">
        Snapseed
    </string>

    <string name="buttonsubmit">
        Submit Answers
    </string>

    <!-- This string is line 1 of the message to display
    after button "check answers" is pressed -->
    <string name="message">
        You have<xliff:g example=" 2 " id="rightAnwers"> %d </xliff:g>
        right answers out of 6
    </string>

    <!--This string is line 2 of the message if all 6 are correct-->
    <string name="congrats">Congratulations!</string>

    <!--This string is line 2 of the message if not all 6 are correct-->
    <string name="checkAgain">Check your answers!</string>

</resources>
