<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckgrd"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Question 1-->
        <TextView
            style="@style/questions_properties"
            android:text="@string/question1" />

        <!--Drawing a line divider-->
        <View
            style="@style/divider"
            android:layout_width="match_parent" />

        <!--Question 2-->
        <TextView
            style="@style/questions_properties"
            android:text="@string/question2" />

        <!--Drawing a line divider-->
        <View
            style="@style/divider"
            android:layout_width="match_parent" />

        <!--Question 3-->
        <TextView
            style="@style/questions_properties"
            android:text="@string/question3" />

        <!--Drawing a line divider-->
        <View
            style="@style/divider"
            android:layout_width="match_parent" />

        <!--Question 4-->
        <TextView
            style="@style/questions_properties"
            android:text="@string/question4" />

        <!--Drawing a line divider-->
        <View
            style="@style/divider"
            android:layout_width="match_parent" />

        <!--Question 5-->
        <TextView
            style="@style/questions_properties"
            android:text="@string/question5" />

        <!--Drawing a line divider-->
        <View
            style="@style/divider"
            android:layout_width="match_parent" />

        <!--Question 6-->
        <TextView
            style="@style/questions_properties"
            android:text="@string/question6" />

        <!--Drawing a line divider-->
        <View
            style="@style/divider"
            android:layout_width="match_parent" />

        <!--Button to submit answers-->
        <Button
            android:id="@+id/submitButton"
            style="@style/buttonsubmit"
            android:text="@string/buttonsubmit" />

        <!--Button to clear answers-->
        <Button
            android:id="@+id/clearButton"
            style="@style/buttonsubmit"
            android:text="@string/buttonclear" />

    </LinearLayout>

</ScrollView>